--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu-32s]
+[platformio]
+default_envs = esp32dev
+
+[env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
-;    U8g2
+    u8g2
+
+[env:d1-mini]
+platform = espressif8266
+board = d1_mini
+framework = arduino
+lib_deps = 
+    u8g2
