--- a/platformio.ini
+++ b/platformio.ini
@@ -15,12 +15,15 @@ default_envs = esp32dev
 platform = espressif32
 board = esp32dev
 framework = arduino
+upload_protocol = espota
+upload_port = Sgoplereef.local
+monitor_speed = 115200
+;upload_flags =
+;    --port=8266
+monitor_filters =
+    printable
+    esp32_exception_decoder
 lib_deps = 
     u8g2
-
-[env:d1-mini]
-platform = espressif8266
-board = d1_mini
-framework = arduino
-lib_deps = 
-    u8g2
+    ESPAsyncWiFiManager
+    ESP Async WebServer
