Versuine aggiornata in c++

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,12 +11,26 @@
 [platformio]
 default_envs = esp32dev
 
+[env]
+custom_hostname=SgopleReef
+custom_domain=.local
+build_flags =
+  -DSMT_HOST=${env.custom_hostname}
+  -DSMT_DOMAIN=${env.custom_domain}
+  -DEVODEBUG
+  -DEVODEBUG_REMOTE
+  -DEVODEBUG_SERIAL
+  -DSMT_VERSION=0.0.8
+  -DBEARSSL_SSL_BASIC
+
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
-upload_protocol = espota
-upload_port = Sgoplereef.local
+board_build.partitions = min_spiffs.csv
+;board_build.partitions = default.csv
+;upload_protocol = espota
+;upload_port = SgopleReef.local
 monitor_speed = 115200
 ;upload_flags =
 ;    --port=8266
@@ -25,5 +39,19 @@ monitor_filters =
     esp32_exception_decoder
 lib_deps = 
     u8g2
-    ESPAsyncWiFiManager
+;    ESPAsyncWiFiManager
     ESP Async WebServer
+    ArduinoJson
+extra_scripts = 
+;  pre:scripts/firmware_name.py
+  scripts/webapp_embed.py 
+build_flags =
+  ${env.build_flags} 
+  -DBOARD_HAS_PSRAM
+  -mfix-esp32-psram-cache-issue    
+board_build.embed_txtfiles =
+   data/favicon.ico.gz
+   data/index.html.gz
+   data/main.css.gz
+   data/main.js.gz
+
