--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,10 +9,16 @@ FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:0-14
 
 # ** [Optional] Uncomment this section to install additional packages. **
 #
+EXPOSE 8010
+
 RUN apt-get update \
     && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends python3 \
-    && export LC_ALL=C.UTF-8 \
-    && export LANG=C.UTF-8 \
-    && python3 -c "$(curl -fsSL https://raw.githubusercontent.com/platformio/platformio/develop/scripts/get-platformio.py)" 
+    && apt-get -y install --no-install-recommends python3 python3-pip curl \
+#    && pip install -U platformio
+#    && curl -fsSL https://raw.githubusercontent.com/platformio/platformio-core/master/scripts/99-platformio-udev.rules | sudo tee /etc/udev/rules.d/99-platformio-udev.rules
+#    && service udev restart \
+#   && export LC_ALL=C.UTF-8 \
+#   && export LANG=C.UTF-8 \
+#   && python3 -c "$(curl -fsSL https://raw.githubusercontent.com/platformio/platformio/develop/scripts/get-platformio.py)" 
 
+# export PATH=$PATH:~/.platformio/penv/bin
